--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -22,6 +22,8 @@ ext {
 	set('springCloudVersion', "2025.0.0") // 사용할 스프링 클라우드 버전
 	set('testcontainersVersion', "1.19.8") // 사용할 테스트컨테이너 버전
 	set('testKeycloakVersion', "3.3.1")
+	set('otelVersion', "1.33.3")
+
 }
 
 dependencies {
@@ -42,6 +44,7 @@ dependencies {
 	runtimeOnly 'org.flywaydb:flyway-core'
 	runtimeOnly 'org.flywaydb:flyway-database-postgresql'
 	runtimeOnly 'org.springframework:spring-jdbc'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'  // 메타데이터가 자동으로 생성되어, 속성의 자동 완성 및 유형 검사가 가능함
 
