--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2025.0.0") // 사용할 스프링 클라우드 버전
+	set('otelVersion', "1.33.3")
 }
 
 dependencies {
@@ -26,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server' // 설정 서버를 구축할 수 있는 라이브러리
 
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
