--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -21,6 +21,7 @@ repositories {
 ext {
 	set('springCloudVersion', "2025.0.0")
 	set('testcontainersVersion', "1.19.8") // 사용할 테스트컨테이너 버전
+	set('otelVersion', "1.33.3")
 
 }
 
@@ -36,6 +37,7 @@ dependencies {
 
 	runtimeOnly 'io.github.resilience4j:resilience4j-micrometer'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
