CH13.5-actuator/info 정의
actuator/info의 경우 처음에 아무것도 리턴하지 않지만 사용자가 info에 나올 데이터를 선택할 수 있다

--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -64,6 +64,10 @@ dependencyManagement {
 	}
 }
 
+springBoot {
+	buildInfo() //빌드 정보를 info가 붙은 객체로 만드는 느낌
+}
+
 bootRun {
 	systemProperty 'spring.profiles.active', 'testdata'
 }
