--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -52,6 +52,10 @@ dependencyManagement {
 	}
 }
 
+springBoot {
+	buildInfo() //빌드 정보를 info가 붙은 객체로 만드는 느낌
+}
+
 bootBuildImage {
 //	builder = "docker.io/paketobuildpacks/builder-jammy-base"
 	imageName= "${project.name}"
