--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -43,6 +43,9 @@ logging:
   pattern:
     level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
+info:
+  system: Polar Bookshop # info로 시작하는 속성은 info 엔드포인트로 조회할 수 있음
+
 management:
   endpoints:
     web:
@@ -54,6 +57,13 @@ management:
       show-components: always # 구성 요소에 대한 정보를 보기 위한 설정
       probes:
         enabled: true # 상태 프로브 활성화 활성, 준비 상태 반환
+  info:
+    env:
+      enabled: true # info로 시작하는 환경변수 정보를 info 엔드포인트를 통해 노출을 허락하는 설정
+    java:
+      enabled: true # java 정보 포함을 활성화
+    os:
+      enabled: true # 운영체제 정보 포함 활성화
   metrics:
     tags: # 애플리케이션 이름으로 마이크로미터 공통 태그 설정 -> 모든 메트릭에 적용되는 프로메테우스 레이블이 만들어짐
       application: ${spring.application.name}
