--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -132,6 +132,13 @@ management:
       group:
         readiness:
           include: readinessState,redis # 애플리케이션과 redis의 상태를 모두 확인하여 상태를 정해야함 -> redis없이 서비스를 할 수 없기 때문에 준비 상태
+  info:
+    env:
+      enabled: true # info로 시작하는 환경변수 정보를 info 엔드포인트를 통해 노출을 허락하는 설정
+    java:
+      enabled: true # java 정보 포함을 활성화
+    os:
+      enabled: true # 운영체제 정보 포함 활성화
   metrics:
     tags:
       application: ${spring.application.name}
