--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -70,6 +70,10 @@ dependencyManagement {
 	}
 }
 
+springBoot {
+	buildInfo() //빌드 정보를 info가 붙은 객체로 만드는 느낌
+}
+
 bootBuildImage {  // 빌드팩을 사용해 OCI 이미지를 빌드하기 위한 플러그인 작엄(패키토)
 	imageName= "${project.name}"
 	environment = ["BP_JVM_VERSION" : "17.*"]
